fixed download button unequal sizes on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -960,6 +960,22 @@ video {
   width: 24px;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-56 {
+  width: 14rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
 .max-w-full {
   max-width: 100%;
 }
@@ -1522,6 +1538,31 @@ video {
 .px-\[32\%\] {
   padding-left: 32%;
   padding-right: 32%;
+}
+
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .pt-1 {
